@@ -1,0 +1,3 @@
+redMine アカウントをアクティブにするには、以下のリンクをたどってください:
+
+http://<%= Setting.host_name %>/account/register?token=<%= @token.value %>
